@@ -6,6 +6,14 @@ deconstruct_and_eval = function(expr, envir = parent.frame(), enclos = parent.fr
         else if (is.call(expr[[1L]])) return (list(deconstruct_and_eval(expr[[1L]])))
         else return(expr)
     }
+    
+    # Fix for #2496. the `{` in `DT[, {var := bla}, by=x]` is caught and removed from `j`.
+    if (expr[[1L]] == "{" & is.call(expr[[2L]])) {
+        if (identical(expr[[2L]][[1L]], quote(`:=`))) {
+            warning('Caught and removed `{` wrapped around := in j. := and `:=`(...) are defined for use in j, once only and in particular ways. See help(":=").')
+            return(deconstruct_and_eval(expr[[2L]], envir, enclos))
+        }
+    }
 
     # don't evaluate eval's if the environment is specified
     if (expr[[1L]] == quote(eval) && length(expr) < 3L) {
